--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
         <link rel="stylesheet" href="style1.css">
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700|Old+Standard+TT&display=swap&subset=cyrillic" rel="stylesheet">
-        
+
         <title>Портфолио Junior верстальщика</title>
 </head>
 
@@ -18,7 +18,7 @@
 
         <section class="hero-image">
                 <div class="container">
-                        <h1 class="heading">Неопознанный Енот</h1>
+                        <h1 class="heading">Опознанный Енот</h1>
                         <p>Junior верстальщик</p>
                 </div>
         </section>
